--- a/Kopigrad/Components/App.razor
+++ b/Kopigrad/Components/App.razor
@@ -15,6 +15,9 @@
     <link rel="stylesheet" href="~/cardsvisit.css?v=1.0.1" />
     <link rel="stylesheet" href="~/staticStyle.css?v=1.0.1" />
     <link rel="stylesheet" href="~/autStyle.css?v=1.0.1" />
+    <link rel="stylesheet" href="~/ServiceUser?v=1.0.1" />
+    <link rel="stylesheet" href="~/userFooters?v=3.0.1" />
+    <link rel="stylesheet" href="~/menuusers?v=2.0.1" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Open+Sans&family=Lato&family=Montserrat&display=swap"
           rel="stylesheet" />
 
