--- a/Kopigrad/Components/Pages/Admin/Requst/Requst.razor
+++ b/Kopigrad/Components/Pages/Admin/Requst/Requst.razor
@@ -254,7 +254,7 @@
     List<bool> isExpanded = new List<bool>();
     List<Models.Status> statuses = new List<Models.Status>();
     List<Models.Order> orders = new List<Models.Order>();
-    List<Models.ContactType> contactTypes = new List<Models.ContactType>();
+    List<Models.Contacttype> contactTypes = new List<Models.Contacttype>();
     List<Classes.Data.DataOrdersClass> dataOrdersItems = new List<Classes.Data.DataOrdersClass>();
     string error = "";
 
