--- a/Kopigrad/Components/Pages/Admin/Requst/Requst.razor
+++ b/Kopigrad/Components/Pages/Admin/Requst/Requst.razor
@@ -313,10 +313,10 @@
     {
         return status switch
         {
-            "1" => "green",
-            "2" => "#E8C200",  // вот тут заменил на нужный желтый
-            "3" => "red",
-            "4" => "gray",
+            "1" => "green", //Выполнен
+            "2" => "#E8C200",  // вот тут заменил на нужный желтый //В обработке
+            "3" => "red", //Ожидает обработки
+            "4" => "gray",//Отменен
             _ => "transparent"
         };
     }
