--- a/Kopigrad/wwwroot/menuusers.css
+++ b/Kopigrad/wwwroot/menuusers.css
@@ -42,6 +42,25 @@
         color: #E83939;
     }
 
+
+.TextMenuUser2 {
+    font-family: DaysFronts;
+    cursor: pointer;
+    font-size: clamp(1rem, 2vw, 1.3rem);
+    font-weight: 600;
+    padding: 6px 12px;
+    border-radius: 6px;
+    transition: all 0.2s ease;
+    text-align: center;
+    word-wrap: break-word;
+    width: 100%;
+    margin: 5px 0;
+}
+
+    .TextMenuUser2:hover {
+        background-color: #ffeaea;
+        color: #E83939;
+    }
 /* Снимаем центрирование */
 .HamburgerBtn {
     display: none;
