--- a/Kopigrad/Components/Pages/User/CreateRequest.razor
+++ b/Kopigrad/Components/Pages/User/CreateRequest.razor
@@ -226,7 +226,7 @@
         // Ничего не делаем, просто предотвращаем стандартную отправку формы
     }
     string click = "не нажала";    //email
-    private string emailCopygrad = "vikmolotova@gmail.com";
+    private string emailCopygrad = "copygrad96@mail.ru";
     private string email;
     private string status;
     private string sentCode;
